<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pa_presentation"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".view.MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/img_pa_user" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUser"
        style="@style/Theme_InputTextPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pa_hint_user"
        app:errorEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            style="@style/Theme_InputTextPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Theme_InputTextPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pa_hint_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Theme_InputTextPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:text="@string/pa_hint_login"
        android:textSize="16sp" />
</LinearLayout>